# torchruntime-uv

./: .gitignore  API.md  MANIFEST.in  PROCESSES.md  README.md  pci.ids.sha256  pyproject.toml
.github/workflows/: pci-update-workflow.yml  pypi-release-workflow.yml  pypi-release-workflow.yml.old  release_workflow.yml  run_tests.yml
scripts/: env.py  sqldiff.py  txt_to_db.py
tests/: test_configure.py  test_device_db.py  test_device_db_integration.py  test_gpu_db.py  test_installer.py  test_platform_detection.py
torch_runtime/: __main__.py  consts.py  gpu_pci_ids.db
torchruntime/: __main__.py  configuration.py  configure.py  device_db.py  gpu_db.py  gpu_pci_ids.db  installer.py  platform_detection.py
torchruntime/utils/: torch_device_utils.py  torch_test.py
