[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "torchruntime-uv"
version = "1.0.0"
description = "A fork of easydiffusion/torchruntime that uses uv by default instead of pip"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: Microsoft :: Windows :: Windows 10", "Operating System :: Microsoft :: Windows :: Windows 11", "Operating System :: POSIX :: Linux", "Operating System :: MacOS",]
keywords = [ "torch", "ai", "ml", "llm", "installer", "runtime", "uv",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "cmdr2"
email = "secondary.cmdr2@gmail.com"

[project.scripts]
torchruntime = "torchruntime.__main__:main"

[project.urls]
Homepage = "https://github.com/mohnjiles/torchruntime-uv"
"Bug Tracker" = "https://github.com/mohnjiles/torchruntime-uv/issues"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vs"
testpaths = [ "tests", "integration",]
